// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VList.js should render a dense component and match snapshot 1`] = `

<div class="list list--dense">
</div>

`;

exports[`VList.js should render a subheader component and match snapshot 1`] = `

<div class="list list--subheader">
</div>

`;

exports[`VList.js should render a threeLine component and match snapshot 1`] = `

<div class="list list--three-line">
</div>

`;

exports[`VList.js should render a twoLine component and match snapshot 1`] = `

<div class="list list--two-line">
</div>

`;

exports[`VList.js should render component and match snapshot 1`] = `

<div class="list">
</div>

`;
